📝 chore: adiciona arquivos e configurações iniciais para a página inicial
✨ feat: adiciona HomeController com ação index para exibir os posts publicados

✨ feat: adiciona PostsController com ação show para exibir um post publicado

🔧 refactor: renomeia variáveis e atualiza lógica para exibir os posts na página inicial

🔧 refactor: remove links de ícones não utilizados no layout da aplicação

✨ feat: adiciona _footer.html.erb para exibir o rodapé da página

✨ feat: adiciona _navbar.html.erb para exibir a barra de navegação da página

🔧 refactor: atualiza as rotas para definir a página inicial e a rota de exibição de um post

✅ test: adiciona testes para a página inicial da aplicação

🔧 refactor: atualiza os testes para verificar a presença de elementos na página inicial

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <section>
-  <% if @contents.any? %>
+  <% if @posts.present? %>
     <h1>Conteúdos</h1>
     <p>Escolha um conteúdo e clique em seu nome para obter continuar lendo.</p>
-    <%= render 'contents/content', { contents: @contents } %>
+    <%= render 'contents/content', { posts: @posts } %>
   <% else %>
     <h1 class="text-center">Não existe conteúdo para exibir</h1>
   <% end %>
