--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,9 +1,9 @@
 <div class='grid contents'>
-  <% contents.each do |content| %>
+  <% posts.each do |post| %>
     <div>
-      <a class='published_content' href='<%= content_path(content) %>'>
-        <article  data-category='<%= content.category.name %>'>
-          <h5><%= content.name %></h5>
+      <a class='published_content' href='<%= post_path(post) %>'>
+        <article  data-category='<%= post.category.name %>'>
+          <h5><%= post.title %></h5>
         </article>
       </a>
     </div>
