🔧 fix(application_controller.rb): adiciona método 'not_found' para renderizar página de erro 404 🔧 fix(post.rb): altera o campo base para gerar o slug de 'name' para 'title' 🔧 fix(home/index.html.erb): altera o nome do partial de 'contents/content' para 'posts/post' 🔧 fix(posts/_post.html.erb): cria o partial para renderizar os posts na página inicial 🔧 fix(posts/show.html.erb): cria o template para exibir os detalhes de um post 🔧 fix(friendly_id.rb): adiciona configuração global para o FriendlyId 🔧 fix(create_friendly_id_slugs.rb): cria a migração para a tabela de slugs do FriendlyId 🔧 fix(schema.rb): atualiza o schema com a nova migração do FriendlyId 🔧 fix(visits_posts_page_spec.rb): cria testes para visitar a página de um post

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <% if @posts.present? %>
     <h1>Conteúdos</h1>
     <p>Escolha um conteúdo e clique em seu nome para obter continuar lendo.</p>
-    <%= render 'contents/content', { posts: @posts } %>
+    <%= render 'posts/post', { posts: @posts } %>
   <% else %>
     <h1 class="text-center">Não existe conteúdo para exibir</h1>
   <% end %>
