🎨 style(_navbar.html.erb): altera o texto do link para exibir o nome do usuário 🌱 chore(seeds.rb): adiciona criação de registros de post e categoria usando FactoryBot

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <li>
           <a href="<%= root_path %>">
             <%= image_tag 'logo.jpeg', { class: 'avatar', alt: "Marcus Pereira" } %>
-            <strong>negros.dev</strong>
+            <strong>Marcus Pereira</strong>
           </a>
         </li>
       </ul>
