📝 chore(user.rb): adiciona modelo de usuário com módulos do Devise 📝 chore(application.html.erb): altera divs para parágrafos nas mensagens de flash 📝 chore(development.rb): adiciona configuração de URL padrão para action mailer
📝 chore(devise.rb): adiciona arquivo de configuração do Devise.rb

🔧 fix(devise.rb): altera a configuração de sign_out_via para :delete
🔧 fix(devise.rb): altera a configuração de responder.error_status para :unprocessable_entity
🔧 fix(devise.rb): altera a configuração de responder.redirect_status para :see_other
🔧 fix(devise.rb): altera a configuração de sign_in_after_change_password para true

🔧 fix(routes.rb): adiciona rota para o Devise
🔧 fix(schema.rb): atualiza versão do schema
🔧 fix(schema.rb): adiciona tabela de usuários
🔧 fix(users.rb): adiciona factory para o modelo User
🔧 fix(user_spec.rb): adiciona teste de presença para email e senha do User
✨ feat(routes.rb): adiciona rota para a página inicial
✨ feat(routes.rb): adiciona rota para exibir um post
✨ feat(20230805170348_devise_create_users.rb): cria tabela de usuários com campos necessários para autenticação

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
 
     <main class="container">
       <% if flash[:alert] %>
-        <div class="alert"><%= flash[:alert] %></div>
+        <p class="alert"><%= flash[:alert] %></p>
       <% end %>
 
       <% if flash[:notice] %>
-        <div class="notice"><%= flash[:notice] %></div>
+        <p class="notice"><%= flash[:notice] %></p>
       <% end %>
 
       <%= yield %>
