--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,13 @@
       </ul>
       <ul>
         <li>
-          <a href="https://github.com/marcuxyz/">
+          <a href="https://github.com/marcuxyz/" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/marcuxyz/" target="_blank">
+            <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
       </ul>
