🎨 style(custom.css): adiciona estilo para a tag de áudio 🐛 fix(post.rb): corrige o método audio? para verificar o tipo de conteúdo do anexo ✨ feat(posts/show.html.erb): exibe o áudio do post se houver anexo de áudio ✨ feat(posts.rb): adiciona trait para criar post com vídeo incorporado ✅ test(visits_posts_page_spec.rb): adiciona teste para visualizar post com áudio 📁 add(audio.m4a): adiciona arquivo de áudio para teste

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -31,6 +31,10 @@ ion-icon {
   color: #fff;
 }
 
+audio {
+  width: 100%;
+}
+
 [data-category]:before {
   background: #ff00a6;
   content   : attr(data-category);
@@ -56,6 +60,11 @@ a:hover {
   color: rgb(216, 232, 248);
   text-decoration: none;
 
+}
+
+a:is([aria-current], :hover, :active, :focus), [role=link]:is([aria-current], :hover, :active, :focus) {
+  color: initial !important;
+  text-decoration: none !important ;
 }
 
 .avatar {
