🔧 chore(.gitignore): adiciona node_modules/ ao .gitignore 🎨 style(custom.css): adiciona estilo para a tag <pre> dentro de .trix-content 🆕 feat(highlight.css): adiciona arquivo de estilo para realce de sintaxe 🔧 chore(application.js): importa o arquivo highlight.js 🆕 feat(highlight.js): adiciona configuração e destaque de código usando highlight.js 🔧 chore(config/importmap.rb): adiciona importação do highlight.js via CDN

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -94,6 +94,10 @@ td {
   text-align: center;
 }
 
+.trix-content pre {
+  background-color: white !important;
+  overflow-x:initial !important;
+}
 
 footer {
   background-color: #18242c;
