--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -26,6 +26,10 @@ nav ul li strong {
   margin-left: 5px;
 }
 
+.contents h1, h2, h3 {
+  margin-bottom: 20px !important;
+}
+
 ion-icon {
   font-size: 30px;
   color: #fff;
