--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<section>
+<section class='contents'>
   <% if @posts.present? %>
     <h1>Conteúdos</h1>
-    <p>Escolha um conteúdo e clique em seu nome para obter continuar lendo.</p>
+    <p>Dicas e tutoriais de desenvolvimento de software com contéudos feitos em vídeos, áudios e escritos. </p>
     <%= render 'posts/post', { posts: @posts } %>
   <% else %>
     <h1 class="text-center">Não existe conteúdo para exibir</h1>
