--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,19 @@
 <section>
   <div class="grid">
     <div>
-      <h3 class="text-center"><%= @post.title %></h3>
+      <article>
+        <h3 class="text-center">
+          <%= @post.title %>
+          </h3></article>
     </div>
+  </div>
+
+  <div class="grid text-right">
+    <small>
+      <strong>
+        <i><%= @post.estimated_reading_time %></i>
+      </strong>
+    </small>
   </div>
 
   <% if  @post.embeded_video.present? %>
