--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <p class="text-center">
-    &COPY; Negros.dev, 2023 · Todos os direitos reservados.
+    &COPY; MARCUS PEREIRA · TODOS OS DIREITOS RESERVADOS
   </p>
 </footer>
