🎨 style(custom.css): change background color of .trix-content pre to #130013 for better readability 🎨 style(highlight.css): update color scheme to improve code readability and aesthetics

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -105,7 +105,7 @@ td {
 }
 
 .trix-content pre {
-  background-color: white !important;
+  background-color: #130013 !important;
   overflow-x:initial !important;
 }
 
