--- a/app/assets/stylesheets/highlight.css
+++ b/app/assets/stylesheets/highlight.css
@@ -1,10 +1,3 @@
-/*!
-  Theme: Github
-  Author: Defman21
-  License: ~ MIT (or more permissive) [via base16-schemes-source]
-  Maintainer: @highlightjs/core-team
-  Version: 2021.09.0
-*/
 pre code.hljs {
   display   : block;
   overflow-x: auto;
@@ -16,102 +9,76 @@ code.hljs {
 }
 
 .hljs {
-  color     : #333;
-  background: #fff
+  background: #23241f;
+  color     : #f8f8f2
 }
 
-.hljs ::selection,
-.hljs::selection {
-  background-color: #c8c8fa;
-  color           : #333
-}
-
-.hljs-comment {
-  color: #969896
-}
-
+.hljs-subst,
 .hljs-tag {
-  color: #e8e8e8
+  color: #f8f8f2
 }
 
-.hljs-operator,
-.hljs-punctuation,
-.hljs-subst {
-  color: #333
-}
-
-.hljs-operator {
-  opacity: .7
+.hljs-emphasis,
+.hljs-strong {
+  color: #a8a8a2
 }
 
 .hljs-bullet,
-.hljs-deletion,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-template-variable,
-.hljs-variable {
-  color: #ed6a43
-}
-
-.hljs-attr,
 .hljs-link,
 .hljs-literal,
 .hljs-number,
-.hljs-symbol,
-.hljs-variable.constant_ {
-  color: #0086b3
+.hljs-quote,
+.hljs-regexp {
+  color: #ae81ff
 }
 
-.hljs-class .hljs-title,
-.hljs-title,
-.hljs-title.class_ {
-  color: #795da3
+.hljs-code,
+.hljs-section,
+.hljs-selector-class,
+.hljs-title {
+  color: #a6e22e
 }
 
 .hljs-strong {
-  font-weight: 700;
-  color      : #795da3
+  font-weight: 700
+}
+
+.hljs-emphasis {
+  font-style: italic
+}
+
+.hljs-attr,
+.hljs-keyword,
+.hljs-name,
+.hljs-selector-tag {
+  color: #f92672
+}
+
+.hljs-attribute,
+.hljs-symbol {
+  color: #66d9ef
+}
+
+.hljs-class .hljs-title,
+.hljs-params,
+.hljs-title.class_ {
+  color: #f8f8f2
 }
 
 .hljs-addition,
 .hljs-built_in,
-.hljs-code,
-.hljs-doctag,
-.hljs-keyword.hljs-atrule,
-.hljs-quote,
-.hljs-regexp,
+.hljs-selector-attr,
+.hljs-selector-id,
+.hljs-selector-pseudo,
 .hljs-string,
-.hljs-title.class_.inherited__ {
-  color: #183691
+.hljs-template-variable,
+.hljs-type,
+.hljs-variable {
+  color: #e6db74
 }
 
-.hljs-attribute,
-.hljs-function .hljs-title,
-.hljs-section,
-.hljs-title.function_,
-.ruby .hljs-property {
-  color: #795da3
-}
-
-.diff .hljs-meta,
-.hljs-keyword,
-.hljs-template-tag,
-.hljs-type {
-  color: #a71d5d
-}
-
-.hljs-emphasis {
-  color     : #a71d5d;
-  font-style: italic
-}
-
-.hljs-meta,
-.hljs-meta .hljs-keyword,
-.hljs-meta .hljs-string {
-  color: #333
-}
-
-.hljs-meta .hljs-keyword,
-.hljs-meta-keyword {
-  font-weight: 700
+.hljs-comment,
+.hljs-deletion,
+.hljs-meta {
+  color: #75715e
 }
