🔧 fix(custom.css): add styling to navbar links to ensure consistent color ✨ feat(posts_controller.rb): add index action to retrieve all posts 🔧 fix(home/index.html.erb): update heading and description for posts section ✨ feat(posts/index.html.erb): create view for displaying all posts 🔧 fix(routes.rb): add index action to posts resource and change path to 'notas' ✨ feat(visits_post_page_spec.rb): add feature test for visiting post page ✨ feat(visits_posts_page_spec.rb): add feature test for visiting posts page and redirecting to post page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,11 @@
 <section class='contents'>
   <% if @posts.present? %>
-    <h1>Conteúdos</h1>
-    <p>Dicas e tutoriais de desenvolvimento de software com contéudos feitos em vídeos, áudios e escritos. </p>
+    <h1>Notas</h1>
+    <p>Pequenas notas escritas focadas no desenvolvimento rápido e prático.</p>
     <%= render 'posts/post', { posts: @posts } %>
+    <div class="text-right">
+      <%= link_to 'Exibir todas as notas', posts_path %>
+    </div>
   <% else %>
     <h1 class="text-center">Não existe conteúdo para exibir</h1>
   <% end %>
