--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,7 +13,8 @@ main {
   grid-template-columns: repeat(3, 1fr) !important;
 }
 
-.navbar strong {
+.navbar strong,
+.navbar a {
   color: #000;
 }
 
