--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,12 +1,16 @@
 html,
 body {
-  display         : flex;
-  min-height      : 100vh;
-  flex-direction  : column;
+  display       : flex;
+  min-height    : 100vh;
+  flex-direction: column;
 }
 
 main {
   flex: 1;
+}
+
+section {
+  margin-bottom: calc(var(--spacing) * 1) !important;
 }
 
 .grid.contents {
@@ -26,7 +30,9 @@ nav ul li strong {
   margin-left: 5px;
 }
 
-.contents h1, h2, h3 {
+.contents h1,
+h2,
+h3 {
   margin-bottom: 20px !important;
 }
 
@@ -52,36 +58,38 @@ audio {
 }
 
 [data-category]:before {
-  display      : block;
-  position     : absolute;
-  top          : 0;
-  right        : 0;
-  padding      : 0.375rem 0.75rem;
-  border-radius: 0;
-  color        : var(--primary-inverse);
-  font-size    : 14px;
-  line-height  : 1;
+  display       : block;
+  position      : absolute;
+  top           : 0;
+  right         : 0;
+  padding       : 0.375rem 0.75rem;
+  border-radius : 0;
+  color         : var(--primary-inverse);
+  font-size     : 14px;
+  line-height   : 1;
   text-transform: uppercase;
 }
 
+a [role=link],
 a {
-  color          : aliceblue;
+  --color: #2b081f !important;
 }
 
 a:hover {
-  color: rgb(216, 232, 248);
+  color          : rgb(216, 232, 248);
   text-decoration: none;
 
 }
 
-a:is([aria-current], :hover, :active, :focus), [role=link]:is([aria-current], :hover, :active, :focus) {
-  color: initial !important;
-  text-decoration: none !important ;
+a:is([aria-current], :hover, :active, :focus),
+[role=link]:is([aria-current], :hover, :active, :focus) {
+  color          : initial !important;
+  text-decoration: none !important;
 }
 
 .avatar {
-  width : 48px;
-  height: auto;
+  width        : 48px;
+  height       : auto;
   border-radius: 50%;
 }
 
@@ -108,12 +116,13 @@ td {
 
 .trix-content pre {
   background-color: #130013 !important;
-  overflow-x:initial !important;
+  overflow-x      : initial !important;
 }
 
 footer {
   background-color: #000;
 }
+
 footer p {
   color: #fff !important;
 
