--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
 <section>
+  <div>
+    <%= form_with url: search_posts_path, method: :get do | form |%>
+      <%= form.search_field :q, { placeholder: 'Insira o título da nota que deseja buscar e pressione enter' } %>
+    <% end %>
+  </div>
   <%= render 'posts/post', { posts: @posts } %>
 </section>
