--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,33 +1,27 @@
 <section>
-  <div class="grid">
+  <div class="grid contents">
     <div>
-      <article>
-        <h3 class="text-center">
-          <%= @post.title %>
-          </h3></article>
+      <a href="post.html">
+        <article>
+          <h3>
+            <%= @post.title %>
+          </h3>
+        </article>
+      </a>
     </div>
   </div>
 
   <% if  @post.embeded_video.present? %>
-    <div class="grid">
+    <div class="grid contents">
       <div>
         <%= @post.embeded_video.html_safe %>
-      </div>
-    </div>
-  <% end %>
-
-  <% if @post.attachment.attached? && @post.audio? %>
-    <h3 class="text-left">🎧 Áudio</h3>
-    <div class="grid">
-      <div>
-        <%= audio_tag(polymorphic_path(@post.attachment), controls: true) %>
       </div>
     </div>
   <% end %>
 </section>
 
 <section>
-  <div class="grid">
+  <div class="grid contents">
     <div>
       <p>
         <%= @post.content %>
