chore(application.html.erb): add meta tags and update favicon link
The meta tags were added to improve SEO and social media sharing. The favicon link was updated to use the `image_path` helper method for consistency.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,22 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="generator" content="Rails 7.0.8" />
+    <meta property="og:title" content="Marcus Pereira" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta name="description" content="Desenvolvedor com mais de 6 anos de experiência em desenvolvimento de software." />
+    <meta property="og:description"
+      content="Desenvolvedor com mais de 6 anos de experiência em desenvolvimento de software." />
+    <link rel="canonical" href="https://marcuspereira.dev/" />
+    <meta property="og:url" content="https://marcuspereira.dev/" />
+    <meta property="og:site_name" content="Marcus Pereira" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:image" content="/assets/images/banner.png" />
+    <meta property="twitter:title" content="Marcus Pereira" />
+    <meta name="twitter:site" content="@marcuxyz" />
+    <meta name="twitter:creator" content="@marcuxyz" />
+
     <link rel="shortcut icon" href="<%= image_path 'favicon.ico' %>">
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
