--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html lang="pt-BR" data-theme="dark">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GWKKVC8TM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGPJH1Q4RK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-5GWKKVC8TM');
+      gtag('config', 'G-YGPJH1Q4RK');
     </script>
 
     <title>Marcus Pereira - Aprenda a desenvolver aplicações de maneira divertida</title>
