style(actiontext.css): improve readability and maintainability of attachment gallery styles style(actiontext.css): add styling for pre elements in actiontext content style(custom.css): increase font size of .contents .text elements style(highlight.css): update Monokai Sublime style to improve code highlighting view(posts/show.html.erb): add missing class "text" to div element for better styling

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -61,6 +61,10 @@ article>header {
   gap                  : 1.8rem;
 }
 
+.contents .text {
+  font-size: 1.3em;
+}
+
 hr {
   margin-top: 3rem;
 }
