--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
 
 <section>
   <div class="grid contents">
-    <div>
+    <div class="text">
       <p>
         <%= @post.content %>
       </p>
