--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -11,21 +11,35 @@
  * <action-text-attachment> element we wrap around attachments. Otherwise,
  * images in galleries will be squished by the max-width: 33%; rule.
 */
-.trix-content .attachment-gallery > action-text-attachment,
-.trix-content .attachment-gallery > .attachment {
-  flex: 1 0 33%;
-  padding: 0 0.5em;
+.trix-content .attachment-gallery>action-text-attachment,
+.trix-content .attachment-gallery>.attachment {
+  flex     : 1 0 33%;
+  padding  : 0 0.5em;
   max-width: 33%;
 }
 
-.trix-content .attachment-gallery.attachment-gallery--2 > action-text-attachment,
-.trix-content .attachment-gallery.attachment-gallery--2 > .attachment, .trix-content .attachment-gallery.attachment-gallery--4 > action-text-attachment,
-.trix-content .attachment-gallery.attachment-gallery--4 > .attachment {
+.trix-content .attachment-gallery.attachment-gallery--2>action-text-attachment,
+.trix-content .attachment-gallery.attachment-gallery--2>.attachment,
+.trix-content .attachment-gallery.attachment-gallery--4>action-text-attachment,
+.trix-content .attachment-gallery.attachment-gallery--4>.attachment {
   flex-basis: 50%;
-  max-width: 50%;
+  max-width : 50%;
 }
 
 .trix-content action-text-attachment .attachment {
-  padding: 0 !important;
+  padding  : 0 !important;
   max-width: 100% !important;
+}
+
+.trix-content pre {
+  display          : inline-block;
+  width            : 100%;
+  vertical-align   : top;
+  font-family      : monospace;
+  font-size        : 0.9em;
+  padding          : 0.5em;
+  white-space      : pre;
+  /* background    : none !important; */
+  background-color : #22221b;
+  overflow-x       : auto;
 }
