fix(posts): update post author and date display to use localized short date format feat(posts_pt-BR.yml): add Brazilian Portuguese locale for posts feat(visits_home_page_spec.rb): update test to include post author and date display

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
     <div>
       <p>
          <%= image_tag 'logo.jpeg', { class: 'avatar', alt: "Marcus Pereira" } %>
-        <span class="author">Marcus Almeida • 09 Set, 2023</span>
+        <span class="author">Marcus Almeida • <%= I18n.l(post.created_at, format: :shortdate).titleize %></span>
       </p>
     </div>
 
