--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
     <div>
       <p>
          <%= image_tag 'logo.jpeg', { class: 'avatar', alt: "Marcus Pereira" } %>
-        <span class="author">Marcus Almeida • <%= I18n.l(post.created_at, format: :shortdate).titleize %></span>
+        <span class="author"><%= post.user.profile.fullname %> • <%= I18n.l(post.created_at, format: :shortdate).titleize %></span>
       </p>
     </div>
 
