refactor(posts): improve readability and structure of _post.html.erb partial fix(post_spec.rb): add missing association test for user in Post model feat(user_spec.rb): add association test for profile in User model

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,13 @@
 <article>
-  <a href='<%= post_path(post) %>'>
-    <h3><%= post.title %></h3>
-  </a>
-  <p> <%= post.content.to_plain_text.slice(1, 80) %> ... </p>
+  <%= link_to post_path(post)  do %>
+    <h3>
+      <%= post.title %>
+    </h3>
+  <% end %>
+
+  <p>
+    <%= post.content.to_plain_text.slice(0, 80) %> ...
+  </p>
 
   <footer class="flex">
     <div>
